git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "b6e4b3f"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "b6e4b3f"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/traps.pod
+++ b/perl6/doc/lib/Language/traps.pod
@@ -164,27 +164,27 @@ array.  This is why the number of elements will turn out to be 1 instead of
 zero as might be expected by the unwary.
 
     my @array = [];    # assigns empty array as an item in @array
-    say @array.elems;  #=> 1
+    say @array.elems;  #-> 1
 
 Whereas querying the number of elements of the empty array directly returns
 zero as expected:
 
-    say [].elems;      #=> 0
+    say [].elems;      #-> 0
 
 This can be more clearly seen by calling the C<.perl> method on the object:
 
     my @array = [];
-    say @array.perl;   #=> Array.new([])  # an array containing an empty array
+    say @array.perl;   #-> Array.new([])  # an array containing an empty array
 
 in contrast to:
 
     my @array = ();
-    say @array.perl;   #=> Array.new()    # a truly empty array
+    say @array.perl;   #-> Array.new()    # a truly empty array
 
 Note that this is I<also> the behaviour in Perl 5:
 
-    perl -E "say scalar(my @array = [])"  #=> 1
-    perl -E "say scalar(my @array = ())"  #=> 0
+    perl -E "say scalar(my @array = [])"  #-> 1
+    perl -E "say scalar(my @array = ())"  #-> 0
 
 =head2 Referencing the last element of an array
 
@@ -192,14 +192,14 @@ In Perl 5 one could reference the last element of an array by asking for the
 "-1th" element of the array, e.g.:
 
     my @array = qw{victor alice bob charlie eve};
-    say @array[-1];   #=>  eve
+    say @array[-1];    #->  eve
 
 In Perl 6 it is not possible to use negative subscripts, however the same is
 achieved by actually using a function, namely C<*-1>.  Thus accessing the
 last element of an array becomes:
 
     my @array = qw{victor alice bob charlie eve};
-    say @array[*-1];   #=>  eve
+    say @array[*-1];   #->  eve
 
 =head1 Strings
 
@@ -207,16 +207,16 @@ last element of an array becomes:
 
 In Perl 5 one could capitalize a string by using the C<ucfirst> function
 
-    say ucfirst "alice"; #=> Alice
+    say ucfirst "alice"; #-> Alice
 
 The C<ucfirst> function does not exist in Perl 6; one needs to use the
 C<tc> method:
 
-    say "alice".tc;      #=> Alice
+    say "alice".tc;      #-> Alice
 
 which is equivalent to
 
-    say tc "alice";    #=> Alice
+    say tc "alice";      #-> Alice
 
 Here, C<tc> means "title case".
 
