--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -97,12 +97,17 @@ what type they coerce to:
 
 =head1 Methods
 
-=head2 method abs
+=head2 routine abs
 
     method abs()
+    sub abs(Numeric() $x)
 
-Coerces the invocant to L<Numeric|/type/Numeric> and returns the absolute
-value (that is, a non-negative number).
+Coerces the invocant (or in the sub form, the argument) to
+L<Numeric|/type/Numeric> and returns the absolute value (that is, a
+non-negative number).
+
+    say (-2).abs;       # 2
+    say abs "6+8i";     # 10
 
 =head2 method conj
 
@@ -112,13 +117,20 @@ Coerces the invocant to L<Numeric|/type/Numeric> and returns the
 L<complex|/type/Complex> conjugate (that is, the number with the sign of the
 imaginary part negated).
 
-=head2 method sqrt
+    say (1+2i).conj;        # 1-2i
+
+=head2 routine sqrt
 
     method sqrt()
+    sub sqrt(Numeric(Cool) $x)
 
-Coerces the invocant to L<Numeric|/type/Numeric> and returns the square root,
+Coerces the invocant to L<Numeric|/type/Numeric> (or in the sub form, the
+arguemnt) and returns the square root,
 that is, a non-negative number that, when multiplied with itself, produces the
 original number.
+
+    say 4.sqrt;             # 2
+    say sqrt(2);            # 1.4142135623731
 
 =head2 method sign
 
@@ -127,6 +139,10 @@ original number.
 Coerces the invocant to L<Numeric|/type/Real> and returns its sign, that
 is, 0 if the number is 0, 1 for positive and -1 for negative values.
 
+    say 6.sign;             # 1
+    say (-6).sign;          # -1
+    say "0".sign;           # 0
+
 =head2 method rand
 
     method rand()
@@ -134,12 +150,22 @@ is, 0 if the number is 0, 1 for positive and -1 for negative values.
 Coerces the invocant to L<Num|/type/Num> and returns a pseudo-random value
 between zero and the number.
 
+    say 1e5.rand;           # 33128.495184283
+
 =head2 method sin
 
     method sin()
 
 Coerces the invocant to L<Numeric|/type/Numeric>, interprets it as radians,
 returns its L<sine|https://en.wikipedia.org/wiki/Sine>.
+
+    say sin(0);             # 0
+    say sin(pi/4);          # 0.707106781186547
+    say sin(pi/2);          # 1
+
+Note that Perl 6 is no computer algebra system, so C<sin(pi)> typically does
+not produce an exact 0, but rather a very small L<floating-point
+number|/type/Num>.
 
 =head2 method asin
 
