git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "9a9effb"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "9a9effb"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -306,7 +306,7 @@ single value, you can also explicitly put a C<+> in front:
 
     / <+[123]> /  # same as <[123]>
 
-=head1 Quantifier
+=head1 Quantifiers
 
 A quantifier makes a preceding atom match not exactly once, but rather a
 variable number of times. For example C<a+> matches one or more C<a>
@@ -903,6 +903,37 @@ abracadabra
      adabra
        abra
 =end code
+
+=head1 Look-around assertions
+
+=head2 Lookahead assertions
+
+=head2 Lookbehind assertions
+
+To check that a pattern appears before another pattern, one can use a
+lookbehind assertion via the C<after> assertion.  This has the form:
+
+    <?after pattern>
+
+Thus, to search for the string C<bar> which is immediately preceded by the
+string C<foo>, one could use the following regexp:
+
+    rx{ <?after foo> bar }
+
+which one could use like so:
+
+    say "foobar" ~~ rx{ <?after foo> bar };   #->  bar
+
+However, if you want to search for a pattern which is B<not> immediately
+preceded by some pattern, then you need to use a negative lookbehind
+assertion, this has the form:
+
+    <?!after pattern>
+
+Hence all occurrences of C<bar> which I<do not> have C<foo> before them
+would be matched by
+
+    rx{ <?!after foo> bar }
 
 =head1 Best practices and gotchas
 
