--- a/perl6/doc/lib/Type/IO/Socket/INET.pod
+++ b/perl6/doc/lib/Type/IO/Socket/INET.pod
@@ -8,7 +8,32 @@
 
 C<IO::Socket::INET> provides TCP sockets, both the server and the client side.
 
-=comment TODO: examples of both client and server
+Here is an example of a very simplistic "echo" server that listens on
+localhost, port 3333:
+
+=begin code
+use v6;
+
+my $listen = IO::Socket::INET.new(:listen, :localport(3333));
+loop {
+    my $conn = $listen.accept;
+    while my $buf = $conn.recv(:bin) {
+        $conn.write: $buf;
+    }
+    $conn.close;
+}
+=end code
+
+And a client that connects to it, and prints out what the server answers:
+
+=begin code
+use v6;
+
+my $conn = IO::Socket::INET.new(:host<localhost>, :port(3333));
+$conn.send: 'Hello, Perl 6';
+say $conn.recv;
+$conn.close;
+=end code
 
 =head1 Methods
 
