git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "b3a4cdc"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "b3a4cdc"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -710,6 +710,18 @@ L<Regex|/type/Regex> as a list of strings.
 
     say "6 or 12".comb(/\d+/).join(", ");           # 6, 12
 
+=head2 routine index
+
+    multi sub    index(Str(Cool) $s, Str:D $needle, Int(Cool) $startpos = 0) returns Int
+    multi method index(Str(Cool) $needle, Int(Cool) $startpos = 0) returns Int
+
+Coerces the first two arguments (in method form, also counting the invocant)
+to L<Str|/type/Str>, and searches for C<$needle> in the string starting from C<$startpos>.
+It returns the offset into the string where C<$needle> was found, and an undefined
+value if it was not found.
+
+See L<the documentation in type Str|/type/Str#routine index> for examples.
+
 =head2 routine roots
 
     multi method roots(Int(Cool) $n)
@@ -754,7 +766,7 @@ Coerces the invocant to L<IO::Path>.
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
 unpolar, fmt, substr-rw,
-trans, index, rindex,
+trans, rindex,
 match, subst, sprintf, printf, samecase,
 EVAL
 
