git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "ca2186e"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "ca2186e"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -347,6 +347,14 @@ C<a ** 2..5> to match the character C<a> at least twice and at most 5 times.
 If the minimal and maximal number of matches are the same, a single integer
 is possible: C<a ** 5> matches C<a> exactly five times.
 
+=head2 X<Modified quantifier: %|regex,%>
+
+To more easily match things like comma separated values, you can tack on a
+C<%> modifier to any of the above quantifiers to specify a separator than must
+occur between each of the matches.  So, for example C<a+ % ','> will match
+C<a> or C<a,a> or C<a,a,a> or so on, but it will not match C<a,> or C<a,a,>.
+To match those as well, you may use C<%%> instead of C<%>.
+
 =head1 X<Alternation|regex,||>
 
 To match one of several possible alternatives, separate them by C<||>; the
