--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -722,6 +722,18 @@ value if it was not found.
 
 See L<the documentation in type Str|/type/Str#routine index> for examples.
 
+=head2 routine rindex
+
+    multi sub    rindex(Str(Cool) $haystack, Str(Cool) $needle, Int(Cool) $startpos = $haystack.chars)
+    multi method rindex(Str(Cool) $haystack: Str(Cool) $needle, Int(Cool) $startpos = $haystack.chars)
+
+Coerces the first two arguments (including the invocant in method form) to
+L<Str|/type/Str> and C<$startpos> to L<Int|/type/Int>, and
+returns the last position of C<$needle> in C<$haystack> not after C<$startpos>.
+Returns an undefined value if C<$needle> wasn't found.
+
+See L<the documentation in type Str|/type/Str#routine rindex> for examples.
+
 =head2 routine roots
 
     multi method roots(Int(Cool) $n)
@@ -765,8 +777,7 @@ Coerces the invocant to L<IO::Path>.
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
-unpolar, fmt, substr-rw,
-trans, rindex,
+unpolar, fmt, substr-rw, trans,
 match, subst, sprintf, printf, samecase,
 EVAL
 
